Fixes bug with backdrop windows not showing close buttons properly.

--- a/Ambiance/gtk-3.0/apps/gedit.css
+++ b/Ambiance/gtk-3.0/apps/gedit.css
@@ -155,9 +155,15 @@ GeditStatusbar .button.flat {
 
 .notebook GeditCloseButton:backdrop.button:prelight{
     border-color: shade(@bg_color,0.75);
+    border-image: none;
+    border-style: solid;
+    background-color: transparent;
 }
 
 .notebook GeditTabLabel.active-page GeditCloseButton:backdrop.button:prelight{
     border-color: shade(@bg_color,0.85);
+    border-image: none;
+    border-style: solid;
+    background-color: transparent;
 }
 
